force-app/main/default/objects/Class__c/Class__c.object-meta.xml
<CustomObject>
    <description>provide Information about the class,Instructor of the class and all the courses that class Contains</description>
    <label>Class</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Class Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>