force-app/main/default/objects/Class__c/fields/Class_Code__c.field-meta.xml
<CustomField>
    <fullName>Class_Code__c</fullName>
    <externalId>true</externalId>
    <label>Class Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>