force-app/main/default/objects/Class__c/fields/Class_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Class_Schedule__c</fullName>
    <description>To know when the class is scheduled.</description>
    <label>Class Schedule</label>
    <type>Date</type>
</CustomField>