force-app/main/default/objects/Class__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>used to select the course of the class</description>
    <label>Course</label>
    <referenceTo>Course_Catalog__c</referenceTo>
    <relationshipLabel>classes</relationshipLabel>
    <relationshipName>classes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>