force-app/main/default/objects/Class__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Instructor of the class belongs to contacts.</description>
    <label>Instructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>classes</relationshipLabel>
    <relationshipName>classes</relationshipName>
    <type>Lookup</type>
</CustomField>