force-app/main/default/objects/Class__c/fields/Sumtotal_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Sumtotal_Import_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>provides info about when the record is updated from sumtotal to salesforce.</description>
    <label>Sumtotal Import Date</label>
    <type>DateTime</type>
</CustomField>