force-app/main/default/objects/Class__c/recordTypes/PSA_Class.recordType-meta.xml
<RecordType>
    <fullName>PSA_Class</fullName>
    <active>true</active>
    <description>PSA class</description>
    <label>PSA Class</label>
</RecordType>