force-app/main/default/objects/Class__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Class_Code__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Class_Schedule__c</columns>
    <columns>Course__c</columns>
    <columns>Instructor__c</columns>
    <columns>Sumtotal_Import_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>